# cvm-simple

./: .gitignore  LICENSE  README.md  demo_model.py  pyproject.toml
cvm_simple/: __init__.py  model.py
tests/: test_single_bounded.py
